fixed broken index page

--- a/source/sass/blocks/icon-list.scss
+++ b/source/sass/blocks/icon-list.scss
@@ -21,10 +21,6 @@
 
 .icon-list__item{
   display: flex;
-
-  @media (min-width: $large-width) {
-    margin-right: 110px;
-  }
 }
 
 .icon-list__item--stuck{
